Add acts_as_queryable branch and ACTUALLY disable travis IRC notification.

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,6 @@ before_script:
 branches:
   only:
     - master
+    - acts_as_queryable
 notifications:
   email: false
-  irc: "irc.freenode.org#chiliproject"
