--- a/test/fixtures/repositories.yml
+++ b/test/fixtures/repositories.yml
@@ -1,9 +1,9 @@
 ---
 repositories_001:
   project_id: 1
-  url: file:///<%= Rails.root.gsub(%r{config\/\.\.}, '') %>/tmp/test/subversion_repository
+  url: file:///<%= Rails.root.to_s.gsub(%r{config\/\.\.}, '') %>/tmp/test/subversion_repository
   id: 10
-  root_url: file:///<%= Rails.root.gsub(%r{config\/\.\.}, '') %>/tmp/test/subversion_repository
+  root_url: file:///<%= Rails.root.to_s.gsub(%r{config\/\.\.}, '') %>/tmp/test/subversion_repository
   password: ""
   login: ""
   type: Subversion
